<resources>
    <string name="app_name">Task Minder</string>
    <string name="silahkan_isi_task_dibawah_ini">Silahkan Isi Task Dibawah Ini</string>
    <string name="title">Title</string>
    <string name="deskripsi">Deskripsi</string>
    <string name="tanggal">Tanggal</string>
    <string name="waktu">Waktu</string>
    <string name="event">Event</string>
    <string name="add_task">Add Task</string>
    <string name="hello_user">Hello, User</string>
    <string name="all_tasks">All tasks</string>
    <string name="new_task">New Task</string>
    <string name="delete_confirmation">Confirmation</string>
    <string name="sureToDelete">Are you sure you want to delete the task</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="confirmation">Completed the task!..</string>
    <string name="sureToMarkAsComplete">Are you sure you want to mark this task as completed.</string>
    <string name="congrats_you_have_completed_the_task_successfully">Congrats!… You have completed the task successfully..</string>
</resources>