<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/fragment_create">

    <LinearLayout
        android:background="@color/colorPrimary"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="20dp"
        android:paddingRight="20dp"
        android:paddingTop="30dp"
        android:paddingBottom="50dp"
        android:orientation="vertical"
        tools:ignore="UselessParent">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="20dp"
            android:text="@string/silahkan_isi_task_dibawah_ini"
            android:textStyle="bold"
            android:textColor="@color/Black"
            android:fontFamily="sans-serif-light"/>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:ignore="ExtraText">

            <TextView
                android:id="@+id/title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/title"
                android:textStyle="bold"
                android:layout_marginTop="30dp"
                android:textColor="@color/Black"
                android:fontFamily="sans-serif-light"/>

            <EditText
                android:textSize="14sp"
                android:textColor="@color/Tinta"
                android:id="@+id/editTextTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/title"
                android:background="@drawable/edittext_background"
                android:padding="10dp"
                android:singleLine="true"
                android:imeOptions="actionDone"
                tools:ignore="SpeakableTextPresentCheck,TouchTargetSizeCheck" />
        </RelativeLayout>

        <!-- Deskripsi -->
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/deskripsi"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/deskripsi"
                android:textStyle="bold"
                android:textColor="@color/Black"
                android:layout_marginTop="30dp"
                android:fontFamily="sans-serif-light"/>

            <EditText
                android:textSize="14sp"
                android:textColor="@color/Tinta"
                android:id="@+id/editTextDescription"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/deskripsi"
                android:background="@drawable/edittext_background"
                android:padding="10dp"
                android:singleLine="true"
                android:imeOptions="actionDone"
                tools:ignore="TouchTargetSizeCheck,SpeakableTextPresentCheck" />
        </RelativeLayout>

        <!-- Tanggal -->
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/tanggal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tanggal"
                android:textStyle="bold"
                android:textColor="@color/Black"
                android:layout_marginTop="30dp"
                android:fontFamily="sans-serif-light"/>

            <EditText
                android:textSize="14sp"
                android:id="@+id/TextDate"
                android:textColor="@color/Tinta"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/tanggal"
                android:background="@drawable/edittext_background"
                android:padding="10dp"
                android:clickable="true"
                android:focusable="false"
                android:singleLine="true"
                tools:ignore="TouchTargetSizeCheck,SpeakableTextPresentCheck" />
        </RelativeLayout>

        <!-- Waktu -->
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/waktu"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/waktu"
                android:textStyle="bold"
                android:textColor="@color/Black"
                android:layout_marginTop="30dp"
                android:fontFamily="sans-serif-light"/>

            <EditText
                android:textSize="14sp"
                android:textColor="@color/Tinta"
                android:id="@+id/TextTime"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/waktu"
                android:background="@drawable/edittext_background"
                android:padding="10dp"
                android:clickable="true"
                android:focusable="false"
                android:singleLine="true"
                tools:ignore="TouchTargetSizeCheck,SpeakableTextPresentCheck" />
        </RelativeLayout>

        <!-- Event -->
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/event"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:text="@string/event"
                android:textStyle="bold"
                android:textColor="@color/Black"
                android:fontFamily="sans-serif-light"/>

            <EditText
                android:textSize="14sp"
                android:textColor="@color/Tinta"
                android:id="@+id/editTextEvent"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/event"
                android:background="@drawable/edittext_background"
                android:padding="10dp"
                android:singleLine="true"
                android:imeOptions="actionDone"
                tools:ignore="Autofill,SpeakableTextPresentCheck,TouchTargetSizeCheck" />
        </RelativeLayout>

        <Button
            android:id="@+id/buttonAddTask"
            android:textColor="@color/colorPrimary"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:background="@drawable/custom_button_background"
            android:text="@string/add_task"
            android:fontFamily="sans-serif-black"/>
    </LinearLayout>

</ScrollView>